# my-man

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  verify.yml
src/: actions.rs  call_result.rs  chat.rs  event.rs  guilds.rs  http.rs  main.rs  role.rs  util.rs
src/audio/: audio_source.rs  connection_data.rs  mod.rs  playback.rs
src/commands/: config.rs  mod.rs
src/event/: command_config.rs  listener.rs  mod.rs  util.rs
