[package]
name = "my_man"
version = "0.4.0"
authors = ["Isaac M. Good <imgood@imgoodproductions.org>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
env_logger = "*"
futures = "0.3"
log = "*"
rocket = "0.5.0-rc.1"
songbird = "0.2"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["cache", "client", "rustls_backend", "unstable_discord_api", "voice"]

[dev-dependencies]
tempfile = "*"
