[package]
name = "my_man"
version = "0.4.0"
authors = ["Isaac M. Good <imgood@a-good.name>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
env_logger = "*"
futures = "0.3"
log = "*"
reqwest = "0.11"
rocket = "0.5.0"
songbird = "0.4"
symphonia = { version = "0.5", features = ["mp3"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.12"
default-features = false
features = ["cache", "client", "gateway", "rustls_backend", "unstable_discord_api", "voice"]

[dev-dependencies]
tempfile = "*"
